@@ -1,4 +1,4 @@
-/* Copyright (C) 2000-2023 Free Software Foundation, Inc.
+/* Copyright (C) 2000-2024 Free Software Foundation, Inc.
    This file is part of the GNU LIBICONV Library.
 
    This program is free software: you can redistribute it and/or modify
@@ -1007,7 +1007,7 @@ int main (int argc, char* argv[])
       continue;
     }
 #endif
-    if (argv[i][0] == '-') {
+    if (argv[i][0] == '-' && argv[i][1] != '\0') {
       const char *option = argv[i] + 1;
       if (*option == '\0')
         usage(1);
@@ -1133,19 +1133,26 @@ int main (int argc, char* argv[])
       status = 0;
       for (; i < argc; i++) {
         const char* infilename = argv[i];
-        FILE* infile = fopen(infilename,"r");
-        if (infile == NULL) {
-          int saved_errno = errno;
-          error(0,saved_errno,
-                /* TRANSLATORS: The first part of an error message.
-                   It is followed by a colon and a detail message.
-                   The %s placeholder expands to the input file name.  */
-                _("%s"),
-                infilename);
-          status = 1;
+        if (strcmp(infilename,"-") == 0) {
+          status |= convert(cd,fileno(stdin),
+                            /* TRANSLATORS: A filename substitute denoting standard input.  */
+                            _("(stdin)"),
+                            tocode);
         } else {
-          status |= convert(cd,fileno(infile),infilename,tocode);
-          fclose(infile);
+          FILE* infile = fopen(infilename,"r");
+          if (infile == NULL) {
+            int saved_errno = errno;
+            error(0,saved_errno,
+                  /* TRANSLATORS: The first part of an error message.
+                     It is followed by a colon and a detail message.
+                     The %s placeholder expands to the input file name.  */
+                  _("%s"),
+                  infilename);
+            status = 1;
+          } else {
+            status |= convert(cd,fileno(infile),infilename,tocode);
+            fclose(infile);
+          }
         }
       }
     }
